--- a/docs/portal/developer-portal/uan_install_guide.ditamap
+++ b/docs/portal/developer-portal/uan_install_guide.ditamap
@@ -9,7 +9,8 @@
         </topicmeta>
     <topicref href="upgrade/Notable_Changes.md" format="markdown"/>
     <topicref href="upgrade/Upgrade_UAN_Software_Product.md" format="markdown"/>
-    <topicref href="installation_prereqs/Hardware_and_Software_Prerequisites.md" format="markdown">
+    <topichead>
+	    <topicmeta><navtitle>Hardware and Software Prerequisites</navtitle></topicmeta>    
         <topicref href="installation_prereqs/Prepare_for_UAN_Product_Installation.md"
             format="markdown"/>
         <topicref href="installation_prereqs/Configure_the_BMC_for_UANs_with_iLO.md"
@@ -17,7 +18,7 @@
         <topicref href="installation_prereqs/Configure_the_BIOS_of_an_HPE_UAN.md" format="markdown"/>
         <topicref href="installation_prereqs/Configure_the_BIOS_of_a_Gigabyte_UAN.md"
             format="markdown"/>
-    </topicref>
+    </topichead>
     <topicref href="advanced/Enabling_CAN_CHN.md" format="markdown"/>
     <topicref href="install/Install_the_UAN_Product_Stream.md" format="markdown"/>
     <topicref href="upgrade/Merge_UAN_Configuration_Data.md" format="markdown"/>
