--- a/docs/portal/developer-portal/uan_admin_guide.ditamap
+++ b/docs/portal/developer-portal/uan_admin_guide.ditamap
@@ -7,31 +7,23 @@
         <data name="pubsnumber" value="S-8033"></data>
 		<data name="edition" value="UAN Software Release @product_version@"></data>
     </topicmeta>
-    <topichead>
-	    <topicmeta><navtitle>About UAN Administration</navtitle></topicmeta>
-        <topicref href="operations/About_UAN_Configuration.md" format="markdown"/>
-    </topichead>
+    <topicref href="operations/About_UAN_Configuration.md" format="markdown"/>
     <topichead>
 	    <topicmeta><navtitle>Manage UAN Boot Images</navtitle></topicmeta>
+        <topicref href="operations/Build_a_New_UAN_Image_Using_the_COS_Recipe.md" format="markdown"/>
         <topicref href="operations/Create_UAN_Boot_Images.md" format="markdown"/>
-        <topicref href="operations/Build_a_New_UAN_Image_Using_the_COS_Recipe.md" format="markdown"
-        />
-</topichead>
-    <topichead>	
-	    <topicmeta><navtitle>Administrative Tasks</navtitle></topicmeta>
-        <topicref href="operations/Configure_Interfaces_on_UANs.md" format="markdown"/>
-        <topicref href="operations/Configure_Pluggable_Authentication_Modules_(PAM)_on_UANs.md"
-            format="markdown"/>
-        <topicref href="operations/Mount_a_New_File_System_on_an_UAN.md" format="markdown"/>
-        <topicref href="operations/Boot_UANs.md" format="markdown"/>
-    </topichead>
-    <topichead> 
-	<topicmeta><navtitle>Advanced Administrative Tasks</navtitle></topicmeta>
         <topicref href="advanced/Customizing_UAN_Images_Manually.md" format="markdown"/>
-        <topicref href="advanced/Repurposing_Compute_as_UAN.md" format="markdown"/>
-        <topicref href="advanced/Enabling_CAN_CHN.md" format="markdown"/>
         <topicref href="advanced/SLES_Image.md" format="markdown"/>
+</topichead>
+    <topichead navtitle="Configure Network Interfaces">
+        <topicref href="operations/Configure_Interfaces_on_UANs.md" format="markdown"/>
+        <topicref href="advanced/Enabling_CAN_CHN.md" format="markdown"/>
     </topichead>
+    <topicref href="operations/Configure_Pluggable_Authentication_Modules_(PAM)_on_UANs.md"
+        format="markdown"/>
+    <topicref href="operations/Mount_a_New_File_System_on_an_UAN.md" format="markdown"/>
+    <topicref href="operations/Boot_UANs.md" format="markdown"/>
+    <topicref href="advanced/Repurposing_Compute_as_UAN.md" format="markdown"/>
     <topichead>
 	<topicmeta><navtitle>Troubleshooting</navtitle></topicmeta>
         <topicref href="troubleshooting/Troubleshoot_UAN_Boot_Issues.md" format="markdown"/>
