--- a/docs/portal/developer-portal/uan_install_guide.ditamap
+++ b/docs/portal/developer-portal/uan_install_guide.ditamap
@@ -7,21 +7,19 @@
             <data name="pubsnumber" value="S-8032"></data>
 			<data name="edition" value="UAN Software Release @product_version@"></data>
         </topicmeta>
-    <topicref href="upgrade/Notable_Changes.md" format="markdown"/>
-    <topichead>
-	    <topicmeta><navtitle>Hardware and Software Prerequisites</navtitle></topicmeta>    
-        <topicref href="installation_prereqs/Prepare_for_UAN_Product_Installation.md"
-            format="markdown"/>
-        <topicref href="installation_prereqs/Configure_the_BMC_for_UANs_with_iLO.md"
-            format="markdown"/>
-        <topicref href="installation_prereqs/Configure_the_BIOS_of_an_HPE_UAN.md" format="markdown"/>
+    <topicref href="installation_prereqs/Prepare_for_UAN_Product_Installation.md" format="markdown">
         <topicref href="installation_prereqs/Configure_the_BIOS_of_a_Gigabyte_UAN.md"
             format="markdown"/>
-    </topichead>
-    <topicref href="install/Install_the_UAN_Product_Stream.md" format="markdown"/>
-    <topicref href="operations/About_UAN_Configuration.md" format="markdown">
+        <topicref href="installation_prereqs/Configure_the_BIOS_of_an_HPE_UAN.md" format="markdown"/>
+        <topicref href="installation_prereqs/Configure_the_BMC_for_UANs_with_iLO.md"
+            format="markdown"/>
+    </topicref>
+    <topicref href="install/Install_the_UAN_Product_Stream.md" format="markdown">
+        <topicref href="upgrade/Notable_Changes.md" format="markdown"/>
+    </topicref>
+    <topicref href="operations/Basic_UAN_Configuration.md" format="markdown">
         <topicref href="operations/Configure_Interfaces_on_UANs.md" format="markdown"/>
         <topicref href="advanced/Enabling_CAN_CHN.md" format="markdown"/>
-        <topicref href="operations/UAN_Ansible_Roles.md" format="markdown"/>
     </topicref>
+    <topicref href="operations/UAN_Ansible_Roles.md" format="markdown"/>
 </map>
