--- a/docs/portal/developer-portal/uan_admin_guide.ditamap
+++ b/docs/portal/developer-portal/uan_admin_guide.ditamap
@@ -20,15 +20,15 @@
         <topicmeta>
             <navtitle>UAN Ansible Roles</navtitle>
         </topicmeta>
-        <topicref href="operations/csm_gpg_keys.md">
-        <topicref href="operations/uan_ca_cert.md">
-        <topicref href="operations/uan_disk_config.md">
-        <topicref href="operations/uan_hardening.md">
-        <topicref href="operations/uan_interfaces.md">
-        <topicref href="operations/uan_ldap.md">
-        <topicref href="operations/uan_motd.md">
-        <topicref href="operations/uan_packages.md">
-        <topicref href="operations/uan_shadow.md">
+        <topicref href="operations/csm_gpg_keys.md" format="markdown"/>
+        <topicref href="operations/uan_ca_cert.md" format="markdown"/>
+        <topicref href="operations/uan_disk_config.md" format="markdown"/>
+        <topicref href="operations/uan_hardening.md" format="markdown"/>
+        <topicref href="operations/uan_interfaces.md" format="markdown"/>
+        <topicref href="operations/uan_ldap.md" format="markdown"/>
+        <topicref href="operations/uan_motd.md" format="markdown"/>
+        <topicref href="operations/uan_packages.md" format="markdown"/>
+        <topicref href="operations/uan_shadow.md" format="markdown"/>
     </topichead>
     <topichead>
         <topicmeta><navtitle>Advanced UAN Configuration</navtitle></topicmeta>
