--- a/docs/portal/developer-portal/uan_install_guide.ditamap
+++ b/docs/portal/developer-portal/uan_install_guide.ditamap
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE map PUBLIC "-//OASIS//DTD DITA Map//EN" "map.dtd">
 <map id="uan_install">
-    <title>HPE Cray Supercomputing User Access Node (UAN) Software Installation Guide (S-8032)</title>
+    <title>HPE Cray Supercomputing User Access Node (UAN) Software Installation Guide (S-8032) 2.7.0</title>
         <topicmeta>
             <shortdesc>This publication provides instructions and examples for installing the UAN product software on an HPE Cray EX supercomputer.</shortdesc>
             <data name="pubsnumber" value="S-8032"></data>
-			<data name="edition" value="UAN Software Release @product_version@"></data>
+			<data name="edition" value="UAN Software Release 2.7.0"></data>
         </topicmeta>
     <topicref href="installation_prereqs/Prepare_for_UAN_Product_Installation.md" format="markdown">
         <topicref href="installation_prereqs/Configure_the_BIOS_of_an_HPE_UAN.md" format="markdown"/>
