fix image size in PDFs. Fix workflow issues identified in winter release install

--- a/docs/portal/developer-portal/uan_install_guide.ditamap
+++ b/docs/portal/developer-portal/uan_install_guide.ditamap
@@ -19,6 +19,10 @@
         <topicref href="operations/Configure_Interfaces_on_UANs.md" format="markdown"/>
         <topicref href="advanced/Enabling_CAN_CHN.md" format="markdown"/>
     </topicref>
+    <topichead navtitle="Advanced UAN Configuration">
+        <topicref href="advanced/Designating_Application_Nodes_for_K3s.md" format="markdown"/>
+        <topicref href="advanced/Enabling_K3s.md" format="markdown"/>
+    </topichead>
     <topichead>
         <topicmeta>
             <navtitle>UAN Ansible Roles</navtitle>
